fix gap

--- a/src/components/Player/styles.module.scss
+++ b/src/components/Player/styles.module.scss
@@ -113,7 +113,6 @@
   align-items: center;
   justify-content: center;
   margin-top: 2.5rem;
-  gap: 1.5rem;
 
   button {
     background: transparent;
@@ -147,6 +146,10 @@
       &:hover:not(:disabled) {
         filter: brightness(0.95);
       }
+    }
+
+    & + button {
+      margin-left: 1.5rem;
     }
   }
 
